added average clearance time overall for housing affordability areas

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "d7db3c7e",
    "metadata": {},
    "outputs": [],
@@ -212,6 +212,8 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
+    "display(f\"average clearance time for low affordability housing (in days): {lowAffordability['Clearance_Time'].mean()}\")\n",
+    "display(f\"average clearance time for high affordability housing (in days): {highAffordability['Clearance_Time'].mean()}\")\n",
     "display(stats.ttest_ind(highAffordability['Clearance_Time'], lowAffordability['Clearance_Time']))"
    ]
   },
